@@ -1,2 +1,2 @@
-SIMUPOP_VER = "0.9.1"
-SIMUPOP_REV = "2330"
+SIMUPOP_VER = "0.9.2svn"
+SIMUPOP_REV = "2332"
